@@ -1,7 +1,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)proto.h	1.22 (gritter) 9/30/05
+ * Sccsid @(#)proto.h	1.23 (gritter) 9/30/05
  */
 
 /* n10.c */
@@ -60,6 +60,7 @@ void casedummy(void);
 #define	casekernbefore	casedummy
 #define	casekernafter	casedummy
 #define	caseftr		casedummy
+#define	casefeature	casedummy
 
 #define	kernadjust(a, b)	0
 #define	u2pts(i)		(i)
