@@ -1,7 +1,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)proto.h	1.29 (gritter) 9/30/05
+ * Sccsid @(#)proto.h	1.30 (gritter) 9/30/05
  */
 
 /* t6.c */
@@ -51,6 +51,7 @@ void casekernpair(void);
 void casekernafter(void);
 void casekernbefore(void);
 void caseftr(void);
+void casefeature(void);
 int un2tr(int, int *);
 int tr2un(tchar, int);
 tchar setuc0(int);
