@@ -6,9 +6,9 @@
 #define	USED
 #endif
 #ifdef	NROFF
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.23 (gritter) 9/30/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.25 (gritter) 9/30/05";
 #else	/* !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.23 (gritter) 9/30/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.25 (gritter) 9/30/05";
 #endif	/* !NROFF */
 /* SLIST */
 /*
@@ -19,7 +19,7 @@ mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
 n1.c: * Sccsid @(#)n1.c	1.42 (gritter) 9/27/05
 n2.c: * Sccsid @(#)n2.c	1.11 (gritter) 9/30/05
-n3.c: * Sccsid @(#)n3.c	1.49 (gritter) 9/30/05
+n3.c: * Sccsid @(#)n3.c	1.50 (gritter) 9/30/05
 n4.c: * Sccsid @(#)n4.c	1.12 (gritter) 9/5/05
 n5.c: * Sccsid @(#)n5.c	1.21 (gritter) 9/2/05
 n7.c: * Sccsid @(#)n7.c	1.37 (gritter) 9/18/05
@@ -31,17 +31,17 @@ suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
 tdef.h: * Sccsid @(#)tdef.h	1.48 (gritter) 9/30/05
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.19 (gritter) 9/11/05
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.21 (gritter) 9/18/05
-nroff.d/proto.h: * Sccsid @(#)proto.h	1.22 (gritter) 9/30/05
+nroff.d/proto.h: * Sccsid @(#)proto.h	1.23 (gritter) 9/30/05
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
-troff.d/afm.c: * Sccsid @(#)afm.c	1.33 (gritter) 9/29/05
-troff.d/afm.h: * Sccsid @(#)afm.h	1.13 (gritter) 9/29/05
+troff.d/afm.c: * Sccsid @(#)afm.c	1.34 (gritter) 9/30/05
+troff.d/afm.h: * Sccsid @(#)afm.h	1.14 (gritter) 9/30/05
 troff.d/dev.h: * Sccsid @(#)dev.h	1.7 (gritter) 9/8/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.10 (gritter) 9/8/05
-troff.d/otf.c: * Sccsid @(#)otf.c	1.5 (gritter) 9/29/05
-troff.d/proto.h: * Sccsid @(#)proto.h	1.29 (gritter) 9/30/05
+troff.d/otf.c: * Sccsid @(#)otf.c	1.7 (gritter) 9/30/05
+troff.d/proto.h: * Sccsid @(#)proto.h	1.30 (gritter) 9/30/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.49 (gritter) 9/30/05
-troff.d/t6.c: * Sccsid @(#)t6.c	1.91 (gritter) 9/30/05
+troff.d/t6.c: * Sccsid @(#)t6.c	1.92 (gritter) 9/30/05
 troff.d/troff.h: * Sccsid @(#)troff.h	1.13 (gritter) 9/11/05
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.8 (gritter) 9/18/05
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.1 (gritter) 8/17/05
